@@ -1,0 +1,22 @@
+FROM robkinyon/sims_loader_base:latest
+MAINTAINER Rob Kinyon rob.kinyon@gmail.com
+
+WORKDIR /app
+COPY cpanfile* LICENSE README.md ./
+RUN carton install --deployment --without test
+COPY bin/* ./bin/
+COPY lib ./lib/
+
+COPY "devops/MyConfig.pm" "/root/.cpan/CPAN/MyConfig.pm"
+COPY "devops/packaging/within_carton" "/usr/local/bin/within_carton"
+RUN chmod +x /usr/local/bin/within_carton
+
+COPY "Dockerfile.base" "/opt/docker/Dockerfile.base"
+COPY "Dockerfile.release" "/opt/docker/Dockerfile"
+COPY "Changes" "/opt/docker/Changes"
+COPY "README.md" "/opt/docker/README.md"
+
+WORKDIR /data
+
+ENTRYPOINT [ "/usr/local/bin/within_carton" ]
+CMD [ "-h" ]
